# cmake_package

findswapmake/: CMakeLists.txt
findswapmake/swap/cmake/: Findswap.cmake
swap/: CMakeLists.txt  swapConfig.cmake.in
swap/src/: swap.cpp
swapconfigcmake/: CMakeLists.txt  test.cpp
swapconfigcmake/swap/cmake/: swapConfig.cmake  swapTargets-noconfig.cmake  swapTargets.cmake
