cmake_minimum_required(VERSION 3.13)
project(swap_test)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/swap/cmake)
find_package(swap REQUIRED)
if(swap_FOUND)
	message(STATUS "swap_FOUND=${swap_FOUND}")
	message(STATUS "swap_INCLUDE_DIRS=${swap_INCLUDE_DIRS}")
	message(STATUS "swap_LIBRARIES=${swap_LIBRARIES}")
endif()
add_executable(${PROJECT_NAME} test.cpp)
target_include_directories(${PROJECT_NAME} PRIVATE ${swap_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${swap_LIBRARIES})